--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
                 <h1>Welcome To</h1>
                 <h1> <span class="name-highlight">Rakibul's</span> Website</h1>
                 <h3>World class Web-developer</h3>
                 <p>I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think, I like to dream; I like to talk, I like to listen. I like to see the sunrise in the morning, I like to see the moonlight at night; I like to feel the music flowing on my face, I like to smell the wind coming from the ocean. I like to look at the clouds in the sky with a blank mind, I like to do thought experiment when I cannot sleep in the middle of the night.</p>
+                <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rakibul-islam-60b035b1/"> Hire me </a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
